update ui and fix security config